UHF-2519: Style the focus border for the back to top button

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -154,6 +154,11 @@
 }
 
 a.footer__back-to-top {
+  --border-width: 2px;
+  --outline-gutter: 2px;
+  --outline-width: 3px;
+  --focus-outline-color: var(--hdbt-color-black);
+
   @include font-size(24px,24px);
   align-items: center;
   display: flex;
@@ -161,12 +166,38 @@ a.footer__back-to-top {
   font-weight: 500;
   height: 40px; // Match footer logo height
   margin-top: $spacing-triple;
+  position: relative;
   text-decoration: none;
 
   @include breakpoint($breakpoint-m) {
     margin-bottom: $spacing-triple;
     margin-left: $spacing-double;
+    margin-right: $spacing-half;
     margin-top: 0;
+  }
+
+  &:after {
+    --size: 100%;
+    border: var(--outline-width) solid transparent;
+    content: "";
+    height: var(--size);
+    position: absolute;
+    right: calc(50% + var(--outline-width)); // Move the outline left to nullify the space around the icon.
+    transform: translateX(50%);
+    width: var(--size);
+  }
+
+  &:focus {
+    outline: none;
+
+    &:after {
+      --size: calc(100% + calc(var(--outline-width) * 2 + var(--border-width) * 2 + var(--outline-gutter) * 2));
+      border-color: var(--focus-outline-color);
+    }
+  }
+
+  &:hover {
+    text-decoration: underline;
   }
 }
 
