--- a/src/scss/components/paragraphs/_liftup-with-image.scss
+++ b/src/scss/components/paragraphs/_liftup-with-image.scss
@@ -1,73 +1,56 @@
 $breakpoint-design-image-on-left-right: 830px;
 
-.liftup-with-image {
-  margin: $spacing-quadruple auto 0;
+.component--liftup-with-image .component__content {
   position: relative;
+}
 
-  @include breakpoint($breakpoint-l) {
-    margin-top: $spacing-sextuple;
-  }
-  .liftup-with-image__container {
-    padding-top: 0;
-  }
+.liftup-with-image__image {
+  line-height: 0;
 
-  .liftup-with-image__image {
-    line-height: 0;
-
-    img {
-      width: 100%;
-    }
-  }
-
-  .liftup-with-image__content {
-    padding: $spacing-double;
-  }
-
-  .liftup-with-image__title {
-    @include font-size(24px, 29px);
-    margin-top: 0;
-
-    @include breakpoint($breakpoint-l) {
-      @include font-size(32px, 40px);
-    }
-  }
-
-  .liftup-with-image__desc {
-    @include font-size(18px, 28px);
-    margin-top: $spacing;
-
-    @include breakpoint($breakpoint-l) {
-      @include font-size(20px, 32px);
-    }
-
-    > *:first-child {
-      margin-top: 0;
-    }
-  }
-
-  .hds-button {
-    @include font-size(16px, 24px);
+  img {
+    width: 100%;
   }
 }
 
+.liftup-with-image__content {
+  padding: $spacing-double;
+}
+
+.liftup-with-image__title {
+  @include font-size(24px, 29px);
+  margin-top: 0;
+
+  @include breakpoint($breakpoint-l) {
+    @include font-size(32px, 40px);
+  }
+}
+
+.liftup-with-image__desc {
+  @include font-size(18px, 28px);
+  margin-top: $spacing;
+
+  @include breakpoint($breakpoint-l) {
+    @include font-size(20px, 32px);
+  }
+
+  > *:first-child {
+    margin-top: 0;
+  }
+}
+
+.liftup-with-image__content .hds-button {
+  @include font-size(16px, 24px);
+}
+
 // Designs with image on the left or right.
-.liftup-with-image--design-image-on-right,
-.liftup-with-image--design-image-on-left,
-.liftup-with-image--design-image-on-right-secondary,
-.liftup-with-image--design-image-on-left-secondary {
-  max-width: $container-width-xl;
+.component--liftup-with-image-img {
+  // max-width: $container-width-xl;
 
   .liftup-with-image__image,
   .liftup-with-image__container {
     display: flex;
-    padding: 0;
   }
 
-  .liftup-with-image__image {
-    margin: 0 auto;
-    max-width: $content-area-wrapper-width-max;
-    padding: 0 $spacing-and-half;
-  }
 
   .liftup-with-image__container {
     @include breakpoint($breakpoint-design-image-on-left-right) {
@@ -97,8 +80,7 @@ $breakpoint-design-image-on-left-right: 830px;
   }
 }
 
-.liftup-with-image--design-image-on-right,
-.liftup-with-image--design-image-on-right-secondary {
+.component--liftup-with-image-img.component--liftup-with-image-img-on-right {
   .liftup-with-image__image {
     justify-content: flex-end;
     padding-left: 10%;
@@ -145,8 +127,7 @@ $breakpoint-design-image-on-left-right: 830px;
   }
 }
 
-.liftup-with-image--design-image-on-left,
-.liftup-with-image--design-image-on-left-secondary {
+.component--liftup-with-image-img.component--liftup-with-image-img-on-left {
   .liftup-with-image__image {
     justify-content: flex-start;
     padding-left: 0;
@@ -194,8 +175,7 @@ $breakpoint-design-image-on-left-right: 830px;
 }
 
 // Designs with primary background color.
-.liftup-with-image--design-image-on-right,
-.liftup-with-image--design-image-on-left {
+.component--liftup-with-image-img {
   color: var(--hdbt-color-palette-text--primary);
 
   a.link {
@@ -271,8 +251,7 @@ $breakpoint-design-image-on-left-right: 830px;
 }
 
 // Designs with secondary background color.
-.liftup-with-image--design-image-on-right-secondary,
-.liftup-with-image--design-image-on-left-secondary {
+.component--liftup-with-image-secondary {
   color: var(--hdbt-color-palette-text--secondary);
 
   a.link {
@@ -348,8 +327,7 @@ $breakpoint-design-image-on-left-right: 830px;
 }
 
 // Designs with image as background.
-.liftup-with-image--design-background-text-on-right,
-.liftup-with-image--design-background-text-on-left {
+.component--liftup-with-image-bg {
   .liftup-with-image__container {
     @include breakpoint($breakpoint-l) {
       align-items: center;
@@ -467,7 +445,7 @@ $breakpoint-design-image-on-left-right: 830px;
   }
 }
 
-.liftup-with-image--design-background-text-on-right {
+.component--liftup-with-image-bg.component--liftup-with-image-img-on-left {
   .liftup-with-image__container {
     @include breakpoint($breakpoint-l) {
       justify-content: flex-end;
@@ -475,7 +453,7 @@ $breakpoint-design-image-on-left-right: 830px;
   }
 }
 
-.liftup-with-image--design-background-text-on-left {
+.component--liftup-with-image-bg.component--liftup-with-image-img-on-right {
   .liftup-with-image__container {
     @include breakpoint($breakpoint-l) {
       justify-content: flex-start;
