--- a/templates/paragraphs/paragraph--service-list.html.twig
+++ b/templates/paragraphs/paragraph--service-list.html.twig
@@ -1,66 +1,28 @@
-{#
-/**
- * @file
- * Default theme implementation to display a paragraph.
- *
- * Available variables:
- * - paragraph: Full paragraph entity.
- *   Only method names starting with "get", "has", or "is" and a few common
- *   methods such as "id", "label", and "bundle" are available. For example:
- *   - paragraph.getCreatedTime() will return the paragraph creation timestamp.
- *   - paragraph.id(): The paragraph ID.
- *   - paragraph.bundle(): The type of the paragraph, for example, "image" or "text".
- *   - paragraph.getOwnerId(): The user ID of the paragraph author.
- *   See Drupal\paragraphs\Entity\Paragraph for a full list of public properties
- *   and methods for the paragraph object.
- * - content: All paragraph items. Use {{ content }} to print them all,
- *   or print a subset such as {{ content.field_example }}. Use
- *   {{ content|without('field_example') }} to temporarily suppress the printing
- *   of a given child element.
- * - attributes: HTML attributes for the containing element.
- *   The attributes.class element may contain one or more of the following
- *   classes:
- *   - paragraphs: The current template type (also known as a "theming hook").
- *   - paragraphs--type-[type]: The current paragraphs type. For example, if the paragraph is an
- *     "Image" it would result in "paragraphs--type--image". Note that the machine
- *     name will often be in a short form of the human readable label.
- *   - paragraphs--view-mode--[view_mode]: The View Mode of the paragraph; for example, a
- *     preview would result in: "paragraphs--view-mode--preview", and
- *     default: "paragraphs--view-mode--default".
- * - view_mode: View mode; for example, "preview" or "full".
- * - logged_in: Flag for authenticated user status. Will be true when the
- *   current user is a logged-in member.
- * - is_admin: Flag for admin user status. Will be true when the current user
- *   is an administrator.
- *
- * @see template_preprocess_paragraph()
- *
- * @ingroup themeable
- */
-#}
 {%
   set classes = [
-    'service-list',
-    view_mode ? 'service-list--' ~ view_mode|clean_class,
+    'component',
+    'component--service-list',
   ]
 %}
 
 {% block paragraph %}
   <div{{ attributes.addClass(classes) }}>
     {% block content %}
-      {% embed "@hdbt/misc/container.twig" with {container_element: 'service-list'} %}
-        {% block container_content %}
-          <div class="service-list__header">
-            {% if content.field_service_list_title|render %}
-              <h2 class="service-list__header__title">{{ content.field_service_list_title }}</h2>
-            {% endif %}
-            {% if content.field_service_list_description|render %}
-              <div class="service-list__header__description">{{ content.field_service_list_description }}</div>
-            {% endif %}
+      <div class="component__container">
+        {% if content.field_service_list_title|render %}
+          <h2 class="component__title">
+            {{ content.field_service_list_title }}
+          </h2>
+        {% endif %}
+        {% if content.field_service_list_description|render %}
+          <div class="component__description">
+            {{ content.field_service_list_description }}
           </div>
+        {% endif %}
+        <div class="component__content">
           {{ drupal_view('service_list', 'block', service_list_arguments) }}
-        {% endblock container_content %}
-      {% endembed %}
+        </div>
+      </div>
     {% endblock %}
   </div>
 {% endblock paragraph %}
