UHF-2930: Update cookie page styles so that styles are applied to new categories as well

--- a/src/scss/components/content/_cookie-compliance.scss
+++ b/src/scss/components/content/_cookie-compliance.scss
@@ -39,8 +39,7 @@
     }
   }
 
-  .form-item-categories-essential,
-  .form-item-categories-performance-ux {
+  .hds-checkbox {
     display: block;
     margin-top: $spacing-double;
 
