UHF-2697: Clean and unify margins for component: unit-search

--- a/src/scss/components/paragraphs/_unit-search.scss
+++ b/src/scss/components/paragraphs/_unit-search.scss
@@ -1,25 +1,23 @@
-.unit-search {
+.component--unit-search {
   background-color: $color-silver-light;
-  padding: 0 0 $spacing-double;
 }
 
-.unit-search__container {
+// If the unit-search is just before footer.
+.layout-main-wrapper > *:last-child .component--unit-search:last-child {
+  margin-bottom: -115px; // Enough to get the block under the footer.
+  padding-bottom: 55px; // Leave enough room between the last card and footer.
+}
+
+.component--unit-search .component__container {
+  padding-bottom: $spacing-double;
+  padding-top: $spacing-double;
+
   @include breakpoint($breakpoint-m) {
+    padding-bottom: $spacing-quadruple;
     padding-top: $spacing-quadruple;
   }
 }
 
-.unit-search__header__title {
-  margin-top: 0;
-}
-
-.unit-search__header__description {
-  margin-top: $spacing-and-half;
-
-  p:first-child {
-    margin-top: 0;
-  }
-}
 
 .views--unit-search {
   margin-top: $spacing-double;
