--- a/src/scss/components/paragraphs/_liftup-with-image.scss
+++ b/src/scss/components/paragraphs/_liftup-with-image.scss
@@ -328,7 +328,15 @@ $breakpoint-design-image-on-left-right: 830px;
 
 // Designs with image as background.
 .component--liftup-with-image-bg {
+  .component__container {
+    max-width: none;
+  }
+
   .liftup-with-image__container {
+    @include components-container-max-width();
+    @include component-side-padding();
+    margin-left: auto;
+    margin-right: auto;
     @include breakpoint($breakpoint-l) {
       align-items: center;
       display: flex;
