--- a/src/scss/layout/_main-content.scss
+++ b/src/scss/layout/_main-content.scss
@@ -6,12 +6,17 @@
   }
 }
 
-.has-sidebar--first .main-content {
+.main-content {
+  width: 100%;
+}
+
+.has-sidebar .main-content {
+  @include components-container-max-width();
+  @include component-side-padding();
+  margin-left: auto;
+  margin-right: auto;
+
   @include breakpoint($breakpoint-l) {
     display: flex;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: $content-area-wrapper-width-max;
-    width: 100%;
   }
 }
