UHF-2697: Moved common component html codes to twig template

--- a/src/scss/components/paragraphs/_banner.scss
+++ b/src/scss/components/paragraphs/_banner.scss
@@ -80,7 +80,7 @@ a.banner__button {
     }
   }
 
-  &.banner--has-icon {
+  &.component--banner-has-icon {
     .banner__button {
       @include breakpoint($breakpoint-l) {
         margin-left: auto;
