--- a/src/scss/components/paragraphs/_content-liftup.scss
+++ b/src/scss/components/paragraphs/_content-liftup.scss
@@ -1,4 +1,4 @@
-.component--content-liftup  .component__container > * {
+.component--content-liftup  .component__content > * {
   border: 2px solid $color-black;
 
   &:last-child {
