--- a/templates/paragraphs/paragraph--content-cards.html.twig
+++ b/templates/paragraphs/paragraph--content-cards.html.twig
@@ -16,27 +16,23 @@
   {% set design_class = null %} {# This should not happen #}
 {% endif %}
 
-{%
-  set classes = [
-    'component',
-    'component--content-cards',
-    design_class,
-    has_koro ? 'component--has-koro',
-  ]
-%}
-
 {% block paragraph %}
-  <div{{ attributes.addClass(classes) }}>
-    {% if has_koro %}
-      {% include '@hdbt/misc/koro.twig' with {koro: koro, flip: true } %}
-    {% endif %}
-    <div class="component__container">
-      {% if title %}
-        <h2 class="component__title">{{ title }}</h2>
-      {% endif %}
-      <div class="component__content content-cards">
-        {{ content|without('field_content_cards_design', 'field_content_cards_title') }}
-      </div>
-    </div>
-  </div>
+  {% embed "@hdbt/misc/component.twig" with
+    {
+      component_classes: [
+        'component--content-cards',
+        design_class,
+        has_koro ? 'component--has-koro',
+      ],
+      component_koro: has_koro ? {koro: koro, flip: true },
+      component_title: title,
+      component_content_class: 'content-cards',
+    }
+  %}
+    {% block component_content %}
+
+      {{ content|without('field_content_cards_design', 'field_content_cards_title') }}
+
+    {% endblock component_content %}
+  {% endembed %}
 {% endblock paragraph %}
