--- a/templates/paragraphs/paragraph--liftup-with-image.html.twig
+++ b/templates/paragraphs/paragraph--liftup-with-image.html.twig
@@ -16,52 +16,52 @@
   {% set design_class = null %} {# This should not happen #}
 {% endif %}
 
-{%
-  set classes = [
-    'component',
-    'component--liftup-with-image',
-    design_class,
-  ]
-%}
-
 {% block paragraph %}
-  <div{{ attributes.addClass(classes) }}>
-    <div class="component__container">
-      <div class="component__content liftup-with-image">
-        <div class="liftup-with-image__image">
-          {% if content.field_liftup_with_image_image|render %}
-            {% for key, image in content.field_liftup_with_image_image %}
-              {% if image.entity %}
-                {% set media = image.entity %}
-                {% set alt = media.fields.field_media_image.alt %}
-                {% if
-                  design == "image-on-right" or
-                  design == "image-on-left" or
-                  design == "image-on-right-secondary" or
-                  design == "image-on-left-secondary"
+  {% embed "@hdbt/misc/component.twig" with
+    {
+      component_classes: [
+        'component--liftup-with-image',
+        design_class,
+      ],
+      component_content_class: 'liftup-with-image',
+    }
+  %}
+    {% block component_content %}
+
+      <div class="liftup-with-image__image">
+        {% if content.field_liftup_with_image_image|render %}
+          {% for key, image in content.field_liftup_with_image_image %}
+            {% if image.entity %}
+              {% set media = image.entity %}
+              {% set alt = media.fields.field_media_image.alt %}
+              {% if
+                design == "image-on-right" or
+                design == "image-on-left" or
+                design == "image-on-right-secondary" or
+                design == "image-on-left-secondary"
+              %}
+                {% set image =
+                  drupal_image(media.fields.field_media_image.entity.uri.value, 'image__3_2', {alt: alt}, responsive=true)
                 %}
-                  {% set image =
-                    drupal_image(media.fields.field_media_image.entity.uri.value, 'image__3_2', {alt: alt}, responsive=true)
-                  %}
-                {% else %}
-                  {% set image =
-                    drupal_image(media.fields.field_media_image.entity.uri.value, 'hero__background', {alt: alt}, responsive=true)
-                  %}
-                {% endif %}
-                {{ image }}
+              {% else %}
+                {% set image =
+                  drupal_image(media.fields.field_media_image.entity.uri.value, 'hero__background', {alt: alt}, responsive=true)
+                %}
               {% endif %}
-            {% endfor %}
+              {{ image }}
+            {% endif %}
+          {% endfor %}
+        {% endif %}
+      </div>
+      <div class="liftup-with-image__container">
+        <div class="liftup-with-image__content">
+          <h2 class="liftup-with-image__title">{{ content.field_liftup_with_image_title }}</h2>
+          {% if content.field_liftup_with_image_desc|render %}
+            <div class="liftup-with-image__desc">{{ content.field_liftup_with_image_desc }}</div>
           {% endif %}
         </div>
-        <div class="liftup-with-image__container">
-          <div class="liftup-with-image__content">
-            <h2 class="liftup-with-image__title">{{ content.field_liftup_with_image_title }}</h2>
-            {% if content.field_liftup_with_image_desc|render %}
-              <div class="liftup-with-image__desc">{{ content.field_liftup_with_image_desc }}</div>
-            {% endif %}
-          </div>
-        </div>
       </div>
-    </div>
-  </div>
+
+    {% endblock component_content %}
+  {% endembed %}
 {% endblock paragraph %}
