--- a/templates/paragraphs/paragraph--list-of-links.html.twig
+++ b/templates/paragraphs/paragraph--list-of-links.html.twig
@@ -9,23 +9,21 @@
   {% set design_class = 'component--list-of-links-without-image-desc' %}
 {% endif %}
 
-{%
-  set classes = [
-    'component',
-    'component--list-of-links',
-    design_class,
-  ]
-%}
-
 {% block paragraph %}
-  <div{{ attributes.addClass(classes) }}>
-    <div class="component__container">
-      {% if title|render %}
-        <h2 class="component__title">{{ title }}</h2>
-      {% endif %}
-      <div class="component__content list-of-links">
-        {{ content|without('field_list_of_links_design', 'field_list_of_links_title') }}
-      </div>
-    </div>
-  </div>
+  {% embed "@hdbt/misc/component.twig" with
+    {
+      component_classes: [
+        'component--list-of-links',
+        design_class,
+      ],
+      component_title: title,
+      component_content_class: 'list-of-links',
+    }
+  %}
+    {% block component_content %}
+
+      {{ content|without('field_list_of_links_design', 'field_list_of_links_title') }}
+
+    {% endblock component_content %}
+  {% endembed %}
 {% endblock paragraph %}
