UHF-2697: Fixed minor padding problems related to components

--- a/src/scss/components/content/_basic-page.scss
+++ b/src/scss/components/content/_basic-page.scss
@@ -16,6 +16,12 @@
   }
 }
 
+.no-sidebar .lead-in,
+.no-sidebar .components--upper > .component,
+.components--lower > .component {
+  @include component-side-padding();
+}
+
 .page-type--page.has-sidebar {
   .before-content--in-main {
     .page-title {
