--- a/src/scss/layout/_layout-sidebar-first.scss
+++ b/src/scss/layout/_layout-sidebar-first.scss
@@ -23,12 +23,16 @@
   }
 
   .sidebar-first__container {
+    margin-top: $component-spacing-mobile;
+    padding-left: 0;
+    padding-right: 0;
     padding-top: 0;
 
     @include breakpoint($breakpoint-l) {
       display: flex;
       flex-wrap: wrap;
       justify-content: flex-end;
+      margin-top: 0;
       padding-left: $spacing-double;
       padding-right: 0;
     }
