UHF-2697: Simplify region template by removing container

--- a/src/scss/layout/_layout-sidebar-first.scss
+++ b/src/scss/layout/_layout-sidebar-first.scss
@@ -1,4 +1,3 @@
-.has-sidebar .layout-sidebar-first,
 .layout-sidebar-first {
   @include breakpoint($breakpoint-l) {
     order: 2;
@@ -7,9 +6,7 @@
     &.has-navigation {
       order: 1;
 
-      .sidebar-first__container {
-        //margin-top: $spacing;
-
+      .sidebar-first {
         @include breakpoint($breakpoint-l) {
           padding-left: 0;
           padding-right: $spacing-double;
@@ -22,7 +19,7 @@
     }
   }
 
-  .sidebar-first__container {
+  .sidebar-first {
     margin-top: $component-spacing-mobile;
     padding-left: 0;
     padding-right: 0;
