--- a/templates/layout/region.html.twig
+++ b/templates/layout/region.html.twig
@@ -13,11 +13,7 @@
  */
 #}
 {% if content %}
-  {% embed "@hdbt/misc/container.twig" with {container_element: region} %}
-    {% block container_content %}
-      <div{{ attributes.addClass(region|clean_class) }}>
-        {{ content }}
-      </div>
-    {% endblock container_content %}
-  {% endembed %}
+  <div{{ attributes.addClass('custom-region', region|clean_class) }}>
+    {{ content }}
+  </div>
 {% endif %}
