--- a/src/scss/components/paragraphs/_accordion.scss
+++ b/src/scss/components/paragraphs/_accordion.scss
@@ -358,3 +358,17 @@
     border: 0;
   }
 }
+
+// Remove accordion margin-top when it's after another similar margin and has no header
+.accordion--white + .accordion--white.accordion--no-header,
+.accordion--grey + .accordion--grey.accordion--no-header {
+  margin-top: 0;
+  > .container {
+    padding-top: 0;
+  }
+}
+
+// Remove extra line from white accordion when accordions are touching
+.accordion--white + .accordion--white.accordion--no-header > .container > .accordion__wrapper > .accordion-item__header {
+  border-top: 0 none;
+}
