UHF-2519: Styled skip to main button

--- a/templates/layout/region--footer-bottom.html.twig
+++ b/templates/layout/region--footer-bottom.html.twig
@@ -22,7 +22,7 @@
           </a>
           {{ content }}
         </div>
-        <a href="#logo--header" onclick="document.getElementById('logo--header').focus();" class="footer__back-to-top">
+        <a href="#skip-to-main" onclick="document.getElementById('skip-to-main').focus();" class="footer__back-to-top">
           {% trans with {'context': 'Footer back to top link'}  %}Back to top{% endtrans %}{% include '@hdbt/misc/icon.twig' with {icon: 'arrow-up'} %}
         </a>
       </div>
