--- a/templates/layout/html.html.twig
+++ b/templates/layout/html.html.twig
@@ -44,7 +44,7 @@
       Keyboard navigation/accessibility link to main content section in
       page.html.twig.
     #}
-    <a href="#main-content" class="visually-hidden focusable">
+    <a href="#main-content" class="focusable skip-to-main" id="skip-to-main">
       {{ 'Skip to main content'|t }}
     </a>
     {{ page_top }}
