UHF-2519: Add correct color for focus ring of the back to top button on dark footer

--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -249,4 +249,8 @@ a.footer__back-to-top {
       background-color: $color-white;
     }
   }
+
+  a.footer__back-to-top {
+    --focus-outline-color: var(--color-white);
+  }
 }
