UHF-2766: Make the react and share block description color accessible

--- a/src/scss/components/block/_react-and-share.scss
+++ b/src/scss/components/block/_react-and-share.scss
@@ -314,6 +314,7 @@
         margin: $spacing-and-half 0 0;
         @include font-size(16px, 24px);
         color: $color-black-60;
+        opacity: 1;
       }
 
       .rns-input-field {
