--- a/src/scss/layout/_component.scss
+++ b/src/scss/layout/_component.scss
@@ -1,55 +1,6 @@
-// TODO: move mixins and variables to proper files
-
-$component-spacing-breakpoint: $breakpoint-l;
-$component-spacing-mobile: 32px;
-$component-spacing-desktop: 64px;
-$component-title-spacing-mobile: 16px;
-$component-title-spacing-desktop: 16px;
-$component-desc-spacing-mobile: 24px;
-$component-desc-spacing-desktop: 48px;
-$component-side-padding-mobile: 32px;
-$component-side-padding-desktop: 32px;
-
-@mixin component-margin-top(){
-  margin-top: $component-spacing-mobile;
-  @if $component-spacing-mobile != $component-spacing-desktop {
-    @include breakpoint($component-spacing-breakpoint) {
-      margin-top: $component-spacing-desktop;
-    }
-  }
-}
-
-@mixin component-margin-bottom(){
-  margin-bottom: $component-spacing-mobile;
-  @if $component-spacing-mobile != $component-spacing-desktop {
-    @include breakpoint($component-spacing-breakpoint) {
-      margin-bottom: $component-spacing-desktop;
-    }
-  }
-}
-
-@mixin component-side-padding() {
-  padding-left: $component-side-padding-mobile;
-  padding-right: $component-side-padding-mobile;
-
-  @if $component-side-padding-mobile != $component-side-padding-desktop {
-    @include breakpoint($component-spacing-breakpoint) {
-      padding-left: $component-side-padding-desktop;
-      padding-right: $component-side-padding-desktop;
-    }
-  }
-}
-
-@mixin components-container-max-width() {
-  max-width: $component-side-padding-mobile + $content-area-wrapper-width-max + $component-side-padding-mobile;
-  @if $component-side-padding-mobile != $component-side-padding-desktop {
-    @include breakpoint($component-spacing-breakpoint) {
-      max-width: $component-side-padding-desktop + $content-area-wrapper-width-max + $component-side-padding-desktop;
-    }
-  }
-}
-
 // Margins between components
+* ~ .components,
+.unit__services + .component, // unit page accessability sentences accordion neeeds this
 .component ~ .component {
   @include component-margin-top();
 }
