--- a/src/scss/components/misc/_eu-cookie-compliance-banner.scss
+++ b/src/scss/components/misc/_eu-cookie-compliance-banner.scss
@@ -22,6 +22,7 @@
   .eu-cookie-compliance-content {
     display: flex;
     flex-wrap: wrap;
+    padding-top: $spacing-and-half;
   }
 
   .eu-cookie-compliance-message {
