--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -28,6 +28,10 @@
 }
 
 .footer-top {
+  @include components-container-max-width();
+  @include component-side-padding();
+  margin-left: auto;
+  margin-right: auto;
   padding-top: $spacing-quadruple;
 
   @include breakpoint($breakpoint-m) {
