--- a/src/scss/layout/_layout-main-wrapper.scss
+++ b/src/scss/layout/_layout-main-wrapper.scss
@@ -1,3 +1,12 @@
+.has-sidebar .layout-main-wrapper,
+.no-sidebar .main-content {
+  margin-top: $spacing-quadruple;
+
+  @include breakpoint($breakpoint-l) {
+    margin-top: $spacing-sextuple;
+  }
+}
+
 .layout-main-wrapper * {
   scroll-margin-top: 113px; // Mobile header + language switcher.
 
@@ -10,6 +19,7 @@
   @include breakpoint($breakpoint-l) {
     display: flex;
     flex-wrap: wrap;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
