--- a/templates/misc/eu_cookie_compliance_popup_info.html.twig
+++ b/templates/misc/eu_cookie_compliance_popup_info.html.twig
@@ -42,7 +42,7 @@
   'eu-cookie-compliance-banner--' ~ method|clean_class,
 ] %}
 <div role="alertdialog" aria-labelledby="popup-text" {{ attributes.addClass(classes) }}>
-  <div class="popup-content info eu-cookie-compliance-content container">
+  <div class="popup-content info eu-cookie-compliance-content container eu-cookie-compliance-content__container">
     <div id="popup-text" class="eu-cookie-compliance-message">
       {{ message }}
     </div>
