--- a/templates/media/media--remote-video.html.twig
+++ b/templates/media/media--remote-video.html.twig
@@ -30,9 +30,10 @@
  */
 #}
 {% set media_url = media.field_media_oembed_video.0.value %}
-<div class="embedded-content-cookie-complience {{ media.id }}">
+{% set media_attributes = content.field_media_oembed_video.0['#attributes'] %}
+<div class="embedded-content-cookie-compliance media-{{ media.id }}">
   <h2>{{ 'Unable to show embedded video'|t }}</h2>
-  <p>{{ 'Approve marketing cookies in order to show embedded videos.'|t }}</p>
+  <p>{{ 'Approve statistics cookies in order to show embedded videos.'|t }}</p>
   <p><a href="{{ media_url }}" target="_blank">{{ 'Watch video on YouTube.'|t }}</a></p>
 </div>
 
@@ -40,7 +41,12 @@
   '#attached': {
     'drupalSettings': {
       'embedded_media_attributes': {
-        (media.id): content.field_media_oembed_video.0['#attributes']
+        (media.id): {
+          'src': media_attributes.src,
+          'height': media_attributes.height,
+          'width': media_attributes.width,
+          'title': media_attributes.title
+        }
       }
     }
   }
