UHF-2975: Fix the sms service icon

--- a/src/scss/components/content/_service-channel.scss
+++ b/src/scss/components/content/_service-channel.scss
@@ -118,6 +118,10 @@
   mask-image: url('../icons/hds/ui/glyph-at.svg');
 }
 
+.service-channel--sms .service-channel__type:after {
+  mask-image: url('../icons/hds/ui/mobile.svg');
+}
+
 .service-channel--telephone .service-channel__type:after {
   mask-image: url('../icons/hds/ui/phone.svg');
 }
