--- a/src/scss/components/paragraphs/_liftup-with-image.scss
+++ b/src/scss/components/paragraphs/_liftup-with-image.scss
@@ -326,6 +326,13 @@ $breakpoint-design-image-on-left-right: 830px;
   }
 }
 
+
+// Designs with image as background.
+.no-sidebar .components--upper > .component--liftup-with-image-bg {
+  padding-left: 0;
+  padding-right: 0;
+}
+
 // Designs with image as background.
 .component--liftup-with-image-bg {
   .component__container {
